--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -1,8 +1,3 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-
-$color-grey-light-1: #f7f7f7;
 // COLORS
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
@@ -33,13 +28,3 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-dark: #000;
-$color-black: #000;
-
-
-//GRID
-$grid-width: 114rem;
-$gutter-vertical: 8rem;
-$gutter-horizontal: 2rem;
